--- a/computations (5).qmd
+++ b/computations (5).qmd
@@ -1,5 +1,8 @@
 ---
 title: Quarto Computations
+format:
+  html:
+    embed-resources: true
 ---
 
 This dataset contains a subset of the fuel economy data from the EPA.
