--- a/Week_8/Lab_7_Heart_Attack.ipynb
+++ b/Week_8/Lab_7_Heart_Attack.ipynb
@@ -19,7 +19,18 @@
         "id": "Uec0kESZmPF5"
       },
       "source": [
-        "## Lab 7: Heart Attack"
+        "## Heart Attack Risk Assessment"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
+      "source": [
+        "In this project I built models to predict heart attack risk using patient health data. I compared KNN, Logistic Regression, and Decision Tree models using cross validation. Logistic Regression performed the best, especially for sensitivity, meaning it was the best at not missing patients who are actually at risk. This matters a lot in healthcare because missing a heart attack case is a big deal. After validating on new data, Logistic Regression was still the top performer. The most important predictors ended up being chest pain type and max heart rate."
       ]
     },
     {
@@ -1014,7 +1025,7 @@
         "id": "4GVN3s3E9tPg"
       },
       "source": [
-        "The best K vlaue was 15. I listed out a range of K values that balence overfitting at small values and underfitting at larger ones and then tuned using gridsearch to cross validate each value. The corosponding ROC AUC was 0.82. Out of everything we had 86 true nergatives as opposed to 27 false negatives nad 119 true prositve as opposed to 41 false positives. How good or bad that is depends on the requirments of the person asking."
+        "The best K value was 15. I listed a range of K values that balance overfitting at small values and underfitting at large ones, and then tuned them using gridsearch to cross validate each value. The corresponding ROC AUC was 0.82. Out of everything, we had 86 true negatives, 27 false negatives, 119 true positives, and 41 false positives. How good or bad that is depends on the requirments of the person asking."
       ]
     },
     {
@@ -1695,7 +1706,7 @@
         "id": "rvzxaHP8IXg2"
       },
       "source": [
-        "The best penalty paremter is 0.01. I listed out a range of log paremter values that balence overfitting at small values and underfitting at larger ones and then ran gridsearch with the pipline and parameters to do the tuning. The corrospomding ROC AUC was 0.85. Out of everything we had 84 true nergatives as opposed to 19 false negatives had 127 true prositve as opposed to 43 false positives. How good or bad that is depends on the requirments of the person asking. The coefficant that has the most impact on liklehood of a heart attack during exereise appreas to be chest pain followed by maximum heart rate (thalach)."
+        "The best penalty parameter is 0.01. I listed a range of log parameter values that balance overfitting at small values and underfitting at large ones, then ran grid search with the pipeline and parameters to tune. The corresponding ROC AUC was 0.85. Overall, we had 84 true negatives and 19 false negatives, and 127 true positives and 43 false positives. How good or bad that is depends on the requirements of the person asking. The coefficient that has the most impact on the likelihood of a heart attack during exercise appears to be chest pain, followed by maximum heart rate (thalach)."
       ]
     },
     {
@@ -1909,7 +1920,7 @@
         "id": "grgg-otz1Hjs"
       },
       "source": [
-        "The best Decision Tree metrics are 'max_depth': 3, 'min_samples_leaf': , which means the data is only divided based on three condition and no less than ten vexplaotry varibels can be included on one side of each descion. I listed out a range of paremter values and tunned with gridsearch. The corrospomding ROC AUC for the best metrics was 0.83. Out of all predictions we had 84 true negatives as opposed to 19 false negatives had 127 true positve as opposed to 43 false positives. How good or bad that is depends on the requirments of the person asking. The coefficant that has the most impact on liklehood of a heart attack during exereise appreas to be chest pain followed by age."
+        "The best Decision Tree metrics are 'max_depth': 3, 'min_samples_leaf': , which means the data is only divided based on three conditions, and no fewer than ten explanatory variables can be included on one side of each decision. I listed out a range of parameter values and tuned with gridsearch. The corresponding ROC AUC for the best metrics was 0.83. Out of all predictions, we had 84 true negatives as opposed to 19 false negatives, and 127 true positives as opposed to 43 false positives. How good or bad that is depends on the requirements of the person asking. The coefficient that has the most impact on the likelihood of a heart attack during exercise appears to be chest pain, followed by age.\n"
       ]
     },
     {
@@ -1951,7 +1962,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "cce47b99"
       },
@@ -1961,8 +1972,6 @@
         "from sklearn.metrics import roc_curve\n",
         "from sklearn.model_selection import cross_val_predict\n",
         "\n",
-        "#googled how to plot ROC and found roc_curve package\n",
-        "\n",
         "y_prob_knn_best = cross_val_predict(knn_best,X, y, cv=10, method=\"predict_proba\")\n",
         "\n",
         "fpr_knn, tpr_knn, _ = roc_curve(y, y_prob_knn_best[:, 1])\n",
@@ -1970,9 +1979,7 @@
         "df_knn_roc = pd.DataFrame({\n",
         "    \"fpr\": fpr_knn,\n",
         "    \"tpr\": tpr_knn\n",
-        "})\n",
-        "\n",
-        "\n"
+        "})"
       ]
     },
     {
@@ -2448,7 +2455,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The metrics would be accuracy, Precision, recall (spec), and ROC AUC. Accuracy measures overall correctness, Precision focuses on avoiding false positives, Recall measures false negatives so we don t miss cases, and ROC AUC shows how well the model separates the classes. Logitic Regession the best recal so that woudl be the specific metric I would use. I would expect a score simialt to what I got in part 2. "
+        "The metrics would be accuracy, Precision, recall (spec), and ROC AUC. Accuracy measures overall correctness, Precision focuses on avoiding false positives, Recall measures false negatives so we don't miss cases, and ROC AUC shows how well the model separates the classes. Logistic Regression is the best model so that would be the specific metric I would use. I would expect a score similar to what I got in part 2. "
       ]
     },
     {
@@ -2462,8 +2469,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "The metrics I would use would be Logsitic Regresssion is the best model for the hostpitals needs. I would still recommend Logitic Reggresion becaue it had the best recall score, which means the leaest minimizing false negatives. Some coefficant I might also pay attention too would be cp and thlach (maximum heart rate), which were the two most impactful explanatory varaibles for Logistic Regression.I would expect a score simialt to what I got in part 2. \n",
-        "\n"
+        "The metrics I would use would be Logistic Regression is the best model for the hospitals needs. I still recommend Logistic Regression because it had the best recall score, which means the least false negatives. Some coefficients I might also pay attention to include cp and thlach (maximum heart rate), which were the two most impactful explanatory variables in the Logistic Regression. I would expect a score similar to what I got in part 2. "
       ]
     },
     {
@@ -2477,7 +2483,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "ROC AUC would be a good metric to measure accuracy. I would go would use a descion tree becuase it would be alot easier to explain to non technical hospital employees, while still being able to produce metrics unlike Knn. I would expect a score simialt to what I got in part 2. "
+        "ROC AUC would be a good metric to measure accuracy. I would use a decision tree because it would be a lot easier to explain to non-technical hospital employees, while still being able to produce metrics, unlike KNN. I would expect a score similar to what I got in part 2. "
       ]
     },
     {
@@ -2491,7 +2497,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "I would use ROC AUC to compare Knn and Logistic Regression, and pick the one with the better fit curve which seems to be Knn. I would expect a score simialt to what I got in part 2. "
+        "I would use ROC AUC to compare KNN and Logistic Regression, and pick the one with the better fit curve, which seems to be KNN. I would expect a score similar to what I got in part 2."
       ]
     },
     {
@@ -3084,7 +3090,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We would use Cohnes kappa if there were signs that the modle was finding it too easy to preict data, possibly cuased by data being imblenced, or overfit by coincadence for our model.Logisitic Regression has the highest, however, the metrics used in early part were also pointed to logistic regression being the best model. So, our conclusiosn dont meansifuly change from using Cohnes Kappa. So prorbaly the data is well balence and not too easy and or overfitted by nature for the model. "
+        "I would use Cohen's kappa if there were signs that the model was finding it too easy to predict the data, possibly because the data were imbalanced or because the model was overfitting by coincidence. Logistic Regression has the highest. However, the metrics used in the early part also pointed to logistic regression being the best model. So, our conclusions don't change meaningfully when we use Cohen's Kappa. So, the data is probably well balanced, and the model is not overfitting. "
       ]
     }
   ],
